@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="">
+    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="* Take into account what happens on the 404 page when returning no posts">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/functions.php" afterPath="$PROJECT_DIR$/functions.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/style.css" afterPath="$PROJECT_DIR$/style.css" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
@@ -32,18 +33,38 @@
       <file leaf-file-name="changelog.txt" pinned="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7485">
-              <caret line="10" column="6" selection-start-line="10" selection-start-column="6" selection-end-line="10" selection-end-column="6" />
+            <state vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7500">
+              <caret line="7" column="72" selection-start-line="7" selection-start-column="72" selection-end-line="7" selection-end-column="72" />
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="style.css" pinned="false" current-in-tab="true">
+      <file leaf-file-name="style.css" pinned="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/style.css">
           <provider selected="true" editor-type-id="text-editor">
-            <state vertical-scroll-proportion="0.6748555" vertical-offset="26053" max-vertical-offset="27150">
-              <caret line="1768" column="7" selection-start-line="1768" selection-start-column="7" selection-end-line="1768" selection-end-column="7" />
+            <state vertical-scroll-proportion="0.0" vertical-offset="23113" max-vertical-offset="27135">
+              <caret line="1563" column="19" selection-start-line="1563" selection-start-column="19" selection-end-line="1563" selection-end-column="19" />
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="functions.php" pinned="false" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/functions.php">
+          <provider selected="true" editor-type-id="text-editor">
+            <state vertical-scroll-proportion="0.6736527" vertical-offset="9480" max-vertical-offset="11115">
+              <caret line="692" column="73" selection-start-line="692" selection-start-column="73" selection-end-line="692" selection-end-column="73" />
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="404.php" pinned="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/404.php">
+          <provider selected="true" editor-type-id="text-editor">
+            <state vertical-scroll-proportion="8.125" vertical-offset="225" max-vertical-offset="1050">
+              <caret line="2" column="15" selection-start-line="2" selection-start-column="15" selection-end-line="2" selection-end-column="15" />
               <folding />
             </state>
           </provider>
@@ -89,11 +110,11 @@
         <option value="$PROJECT_DIR$/index.php" />
         <option value="$PROJECT_DIR$/readme.txt" />
         <option value="$PROJECT_DIR$/sidebar.php" />
-        <option value="$PROJECT_DIR$/functions.php" />
         <option value="$PROJECT_DIR$/header.php" />
         <option value="$PROJECT_DIR$/footer.php" />
-        <option value="$PROJECT_DIR$/changelog.txt" />
         <option value="$PROJECT_DIR$/style.css" />
+        <option value="$PROJECT_DIR$/changelog.txt" />
+        <option value="$PROJECT_DIR$/functions.php" />
       </list>
     </option>
   </component>
@@ -653,7 +674,13 @@
       <option name="project" value="LOCAL" />
       <updated>1413245689493</updated>
     </task>
-    <option name="localTasksCounter" value="62" />
+    <task id="LOCAL-00062" summary="* Stop Gravity Forms reCaptcha iframe from creating a blank area in the footer">
+      <created>1413247062153</created>
+      <option name="number" value="00062" />
+      <option name="project" value="LOCAL" />
+      <updated>1413247062153</updated>
+    </task>
+    <option name="localTasksCounter" value="63" />
     <servers />
   </component>
   <component name="TodoView" selected-index="0">
@@ -722,7 +749,6 @@
     <option name="myTodoPanelSettings">
       <TodoPanelSettings />
     </option>
-    <MESSAGE value="* Added WordPress ticket reference http://themes.trac.wordpress.org/ticket/13428" />
     <MESSAGE value="* Fix comments closed message displaying when comments are open" />
     <MESSAGE value="* Version update" />
     <MESSAGE value="* Version update; update 'readme.txt' to reference http://themes.trac.wordpress.org/ticket/13479" />
@@ -747,7 +773,8 @@
     <MESSAGE value="* Removed `wp_list_bookmarks` section from `sidebar.php` template" />
     <MESSAGE value="* Dropped backward compatibility for `wp_title` with Desk Mess Mirrored Child-Themes based on version 2.1 and earlier" />
     <MESSAGE value="* Aligned previous month text in default calendar widget to left&#10;- minor documentation updates" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Aligned previous month text in default calendar widget to left&#10;- minor documentation updates" />
+    <MESSAGE value="* Stop Gravity Forms reCaptcha iframe from creating a blank area in the footer" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Stop Gravity Forms reCaptcha iframe from creating a blank area in the footer" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
   </component>
   <component name="WordPressConfiguration" enabled="true">
@@ -769,13 +796,6 @@
       <provider selected="true" editor-type-id="text-editor">
         <state vertical-scroll-proportion="0.0" vertical-offset="105" max-vertical-offset="7110">
           <caret line="7" column="0" selection-start-line="0" selection-start-column="0" selection-end-line="0" selection-end-column="0" />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/404.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state vertical-scroll-proportion="-1.25" vertical-offset="0" max-vertical-offset="1050">
-          <caret line="2" column="15" selection-start-line="0" selection-start-column="0" selection-end-line="0" selection-end-column="0" />
         </state>
       </provider>
     </entry>
@@ -818,13 +838,6 @@
       <provider selected="true" editor-type-id="text-editor">
         <state vertical-scroll-proportion="0.29545453" vertical-offset="0" max-vertical-offset="900">
           <caret line="13" column="39" selection-start-line="0" selection-start-column="0" selection-end-line="0" selection-end-column="0" />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/search.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state vertical-scroll-proportion="7.5" vertical-offset="210" max-vertical-offset="870">
-          <caret line="2" column="18" selection-start-line="0" selection-start-column="0" selection-end-line="0" selection-end-column="0" />
         </state>
       </provider>
     </entry>
@@ -899,14 +912,6 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/functions.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state vertical-scroll-proportion="-71.25" vertical-offset="0" max-vertical-offset="10950">
-          <caret line="144" column="1" selection-start-line="144" selection-start-column="1" selection-end-line="144" selection-end-column="1" />
-          <folding />
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/header.php">
       <provider selected="true" editor-type-id="text-editor">
         <state vertical-scroll-proportion="-9.375" vertical-offset="0" max-vertical-offset="915">
@@ -920,23 +925,71 @@
         <state vertical-scroll-proportion="-13.125" vertical-offset="0" max-vertical-offset="600">
           <caret line="21" column="2" selection-start-line="21" selection-start-column="2" selection-end-line="21" selection-end-column="2" />
           <folding>
-            <element signature="e#6#496#0#PHP" expanded="true" />
+            <element signature="e#6#496#0#PHP" expanded="false" />
           </folding>
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
+    <entry file="file://$PROJECT_DIR$/search.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7485">
-          <caret line="10" column="6" selection-start-line="10" selection-start-column="6" selection-end-line="10" selection-end-column="6" />
-          <folding />
+        <state vertical-scroll-proportion="-11.333333" vertical-offset="163" max-vertical-offset="870">
+          <caret line="29" column="36" selection-start-line="29" selection-start-column="36" selection-end-line="29" selection-end-column="36" />
+          <folding>
+            <element signature="e#6#433#0#PHP" expanded="true" />
+          </folding>
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/style.css">
       <provider selected="true" editor-type-id="text-editor">
-        <state vertical-scroll-proportion="0.6748555" vertical-offset="26053" max-vertical-offset="27150">
-          <caret line="1768" column="7" selection-start-line="1768" selection-start-column="7" selection-end-line="1768" selection-end-column="7" />
+        <state vertical-scroll-proportion="0.0" vertical-offset="23113" max-vertical-offset="27135">
+          <caret line="1563" column="19" selection-start-line="1563" selection-start-column="19" selection-end-line="1563" selection-end-column="19" />
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/../../../wp-includes/general-template.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state vertical-scroll-proportion="2.028443" vertical-offset="33580" max-vertical-offset="44745">
+          <caret line="2334" column="9" selection-start-line="2334" selection-start-column="9" selection-end-line="2334" selection-end-column="9" />
+          <folding>
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT YEAR(..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT YEAR(..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT YEAR(..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT DISTI..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT * FRO..wp_posts..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT 1 as ..wp_posts..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT MONTH..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT MONTH..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="..." />
+            <marker date="1409101190000" expanded="true" signature="-1:-1" placeholder="SELECT DISTI..wp_posts..." />
+          </folding>
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/404.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state vertical-scroll-proportion="8.125" vertical-offset="225" max-vertical-offset="1050">
+          <caret line="2" column="15" selection-start-line="2" selection-start-column="15" selection-end-line="2" selection-end-column="15" />
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7500">
+          <caret line="7" column="72" selection-start-line="7" selection-start-column="72" selection-end-line="7" selection-end-column="72" />
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/functions.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state vertical-scroll-proportion="0.6736527" vertical-offset="9480" max-vertical-offset="11115">
+          <caret line="692" column="73" selection-start-line="692" selection-start-column="73" selection-end-line="692" selection-end-column="73" />
           <folding />
         </state>
       </provider>
