@@ -1562,7 +1562,6 @@ li.widget #search-submit,
 	border: 1px solid #e3dccb;
 	color: #666;
 	font-size: 75%;
-	margin: 0 0 0 84px;
 	width: 85px;
 }
 
